--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -142,6 +142,18 @@
             android:clipToPadding="false"
             tools:listitem="@layout/item_announcement_card" />
 
+        <TextView
+            android:id="@+id/tv_empty_placeholder"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No announcements available."
+            android:textColor="#757575"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:visibility="gone"
+            android:layout_marginTop="32dp"
+            android:paddingBottom="80dp"/>
+
     </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
