--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -61,11 +61,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/name">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edit_name"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Juan M. Dela Cruz" />
+                        android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -73,11 +73,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="@string/province">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edit_province"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Metro Manila" />
+                        android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -85,11 +85,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="@string/city_municipality">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edit_city"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Quezon City" />
+                        android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -97,11 +97,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="@string/barangay">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edit_barangay"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Brgy. 123" />
+                        android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -109,11 +109,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="@string/street">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edit_street"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Maligaya Street" />
+                        android:layout_height="wrap_content" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -121,11 +121,11 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:hint="@string/contact_number">
+
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/edit_contact"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="09123456789"
                         android:inputType="phone" />
                 </com.google.android.material.textfield.TextInputLayout>
 
